# sandeep_reports

./: MANIFEST.in  README.md  install.py  pyproject.toml
reports/creditors_summary_split/: creditors_summary_split.json
reports/receivable_follow_up/: receivable_follow_up.js  receivable_follow_up.json  receivable_follow_up.py
reports/stock_summary/: stock_summary.py
sandeep_reports/: hooks.py  install.py  modules.txt
sandeep_reports/reports_data/: manifest.json
sandeep_reports/reports_data/creditors_summary_split/: creditors_summary_split.js  creditors_summary_split.py
sandeep_reports/reports_data/daily_business_summary/: daily_business_summary.js  daily_business_summary.json  daily_business_summary.py
sandeep_reports/reports_data/debtors_summary_split/: debtors_summary_split.js  debtors_summary_split.json  debtors_summary_split.py
sandeep_reports/reports_data/stock_summary/: stock_summary.js  stock_summary.json
sandeep_reports/reports_data/stock_summary_sales_item/: stock_summary_sales_item.js  stock_summary_sales_item.json  stock_summary_sales_item.py
sandeep_reports/sandeep_reports/report/creditors_summary___split/: creditors_summary___split.json  creditors_summary___split.py
sandeep_reports/sandeep_reports/report/daily_business_summary/: daily_business_summary.js  daily_business_summary.json  daily_business_summary.py
sandeep_reports/sandeep_reports/report/debtors_summary___split/: debtors_summary___split.json  debtors_summary___split.py
sandeep_reports/sandeep_reports/report/receivable_follow_up/: receivable_follow_up.json  (+1 more)
(+8 files in other folders)
